Created page with "Gentoo/FreeBSD is FreeBSD-based Gentoo system.  == Introduction == Please see [[#Links]] if you want details for Gentoo/FreeBSD.  == Installing howto == === Caution === Since thi..."

--- a/Gentoo_FreeBSD.mw
+++ b/Gentoo_FreeBSD.mw
@@ -1,99 +1,28 @@
-{{InfoBox stack
-|{{InfoBox homepage|https://www.freebsd.org/|header=true}}
-|{{InfoBox wikipedia|FreeBSD}}
-}}
+Gentoo/FreeBSD is FreeBSD-based Gentoo system.
 
-{{Important|Sometimes, Gentoo FreeBSD's <code>@system</code> is broken.
-Please get latest information from "Depends on" of {{Bug|462580}}.
-}}
+== Introduction ==
+Please see [[#Links]] if you want details for Gentoo/FreeBSD.
 
-Gentoo FreeBSD was [[Article description::a Gentoo system based on the FreeBSD kernel.]] Gentoo FreeBSD is no longer maintained by any active Gentoo developers.
-
-Gentoo FreeBSD was FreeBSD with the following changes:
-
-* Portage replaces ports.
-* The base system is managed by Portage.
-* Software in {{Path|./contrib}} and {{Path|./crypto}} is replaced with Gentoo versions.
-* The rc system is replaced with [[OpenRC]].
-* {{c|python}}, {{c|wget}}, and {{c|bash}} are included in the base system to support Portage.
-* FreeBSD's bootloader is removed from the base system (useful for jails).
-
-{{Note|Gentoo FreeBSD is not 100% binary-compatibility with regular FreeBSD due to <var>SONAME</var> differences. It is possible to workaround that by running regular FreeBSD in either a jail or chroot on Gentoo FreeBSD or vice versa.
-
-Gentoo FreeBSD is also not 100% script-compatible with regular FreeBSD by default. Script compatibility can be restored by installing {{Package|sys-freebsd/ubin-wrappers}}. This makes it possible to use *BSD software like pkgsrc.
-}}
-
-== Introduction to FreeBSD ==
-
-=== What is FreeBSD? ===
-
-[https://www.freebsd.org/ FreeBSD] is a free ([https://www.freebsd.org/copyright/freebsd-license.html license]) Unix-like operating system. Back in 1993 when development of [https://www.386bsd.org/ 386BSD] stopped, two projects were born: [https://www.netbsd.org/ NetBSD], commonly known to run on a huge number of architectures, and FreeBSD which supports the x86, amd64, ia64, sparc64, and alpha platforms. FreeBSD is renowned for its stability, performance and security, thus being used from small to huge companies all over the world.
-
-FreeBSD's current production release is version 11.0. Gentoo/FreeBSD is based on version 11.0 and older versions of Gentoo/FreeBSD are discontinued and no longer supported.
-
-=== What is Gentoo/FreeBSD? ===
-
-Gentoo FreeBSD project was a sub-project of the [[Project:Prefix|Prefix project]] project, with the goal of providing a fully-capable FreeBSD operating system featuring design sensibilities taken from Gentoo Linux, such as the init system and the Portage package management system.
-
-=== FreeBSD and Linux ===
-
-Users migrating from Linux to FreeBSD commonly consider the two operating systems "almost the same". In fact, FreeBSD really shares a lot of similarities with Linux distributions in general. Nevertheless, it has some key differences that are worth noting:
-
-* Contrary to Linux, which actually only refers to the kernel, FreeBSD is a complete operating system, consisting of a C library, userland tools, and much more. This development approach makes the overall system very consistent.
-* Contrary to the Linux kernel, FreeBSD development is not led by one person, but instead managed by a small group of people called the [https://www.freebsd.org/doc/en_US.ISO8859-1/articles/contributors/staff-committers.html Core Team].
-
-Besides, FreeBSD also has some technical differences which set it apart from Linux. Some of them are very important to know, even for those who do not plan on joining the Gentoo FreeBSD development effort:
-
-* To get run-time dynamic linking functions like <code>dlopen()</code>, programs do not need to be linked against libdl like on GNU/Linux. Instead they are linked against libc.
-* FreeBSD doesn't have an official tool for kernel compilation, thus you'll have to resolve feature dependencies by hand.
-* FreeBSD supports [[UFS]]/[[UFS2]] and [[ZFS]] as native file systems.
-* FreeBSD also supports Linux filesystems, but you cannot install your system on them. ext2/ext3 supports read/write access. ReiserFS and [[XFS]] are read-only support. For details see FreeBSD's handbook [https://www.freebsd.org/doc/handbook/filesystems-linux.html 21.3. Linux® Filesystems]
-
-== Installation ==
-
-{{Important|Part of x86-fbsd is out of date. Please install amd64-fbsd.}}
-
+== Installing howto ==
 === Caution ===
-
-This guide provides minimal information about Gentoo FreeBSD. You need specialized knowledge of Gentoo Linux and FreeBSD. The [[Handbook:Main Page|Gentoo Linux Handbook]] and [https://www.freebsd.org/handbook/ FreeBSD Handbook] should be close friends.
+Since this guide has only minimum information, the knowledge of both Gentoo/Linux and FreeBSD may be needed. 
+[http://www.gentoo.org/doc/en/handbook/ Gentoo/Linux Handbook] and [http://www.freebsd.org/handbook/ FreeBSD Handbook] are your friends. 
 
 === Preparation ===
+The installation media of FreeBSD 9.0 to which the LiveCD function was added are used for installation.
+Please get the more suitable one of [http://ftp.freebsd.org/pub/FreeBSD/releases/i386/i386/ISO-IMAGES/9.0/ i386] or [http://ftp.freebsd.org/pub/FreeBSD/releases/amd64/amd64/ISO-IMAGES/9.0/ amd64].
+Please do write to a CD or memory stick if necessary. 
 
-Gentoo/FreeBSD doesn't have the installation media. Instead, you can use vanilla FreeBSD 9.0 or later version one.
-Please get [http://ftp-archive.freebsd.org/pub/FreeBSD-Archive/old-releases/i386/ISO-IMAGES/9.0/ i386] or [http://ftp-archive.freebsd.org/pub/FreeBSD-Archive/old-releases/amd64/ISO-IMAGES/9.1/ amd64] from ftp-archive.freebsd.org. Some ISO images are available from the ftp server, but please get -bootonly.iso image. Because you can install Gentoo/FreeBSD with the smallest media. If you want to use a memory stick, please get -memstick.img. If necessary, burn it to a CD or write it to a memory stick.
-
-Boot your PC with the installation media. Wait for display a Welcome dialog. Please choose Shell.
-
-{{Note|If you have 4KB/sector HDD (aka AFT Drive)
-
-Please select "2. [Esc]ape to loader prompt" at boot time if you have a 4KB/sector HDD.
-
-Set the device name of your HDD with 4KB sectors in the boot loader. ada1 and ada2... to increase if you have more than one.
-
-<pre>
-set kern.cam.ada.0.quirks="1"
-boot
-</pre>
-}}
-
-==== Optional: Setting keymap  ====
-
-If the keyboard is not an English 101 key keyboard, set the keymap as appropriate:
-
-{{RootCmd|kbdcontrol -l uk.iso}}
-
-A list of the keymap is available with the following command:
-
-{{RootCmd|ls -1 /usr/share/syscons/keymaps {{!}} less}}
+Boot the PC using the installation CD.
+Wait a moment while watching the boot process.
+Please choose Live CD, if a Welcome screen is displayed. 
+Then login prompt, enter root.
 
 ==== Network setting ====
-
-First, create a directory {{Path|/tmp/bsdinstall_etc}} to rewrite the {{Path|resolv.conf}} file:
-
+First, create a directory /tmp/bsdinstall_etc to rewrite the resolv.conf. 
 {{RootCmd|mkdir -p /tmp/bsdinstall_etc}}
 
-Identify the system's network devices. In this example the network interface is <code>em0</code>:
-
+Identify your network devices. This example is em0. 
 {{RootCmd|ifconfig|output=
 <pre>em0: flags=8843&lt;UP,BROADCAST,RUNNING,SIMPLEX,MULTICAST&gt; metric 0 mtu 1500
         options=209b&lt;RXCSUM,TXCSUM,VLAN_MTU,VLAN_HWTAGGING,VLAN_HWCSUM,WOL_MAGIC&gt;
@@ -110,88 +39,75 @@ lo0: flags=8049&lt;UP,LOOPBACK,RUNNING,MULTICAST&gt; metric 0 mtu 16384
 
 Set the default gateway and IP address. 
 
-When setting a static address:
-
+If you not use DHCP (IP address is an example)
 {{RootCmd|ifconfig em0 192.168.0.100
 |route add default 192.168.0.1
-|echo "nameserver 8.8.8.8" > /etc/resolv.conf
-}}
+|echo "nameserver 8.8.8.8" > /etc/resolv.conf (example used a Google Public DNS)}}
 
-When using DHCP:
-
+If you use DHCP
 {{RootCmd|dhclient em0}}
 
-==== Optional: Installing via ssh ====
+==== Optional: want to install via ssh ====
+So far we could not use ssh. If you want to install via ssh from this step. 
 
-{{RootCmd
-|mkdir -p /tmp/etc
-|mount -t tmpfs tmpfs /tmp/etc
-|mount -t unionfs /tmp/etc /etc
-|passwd
-|echo "PermitRootLogin yes" &gt;&gt; /etc/ssh/sshd_config
-|/etc/rc.d/sshd onestart
-}}
+{{RootCmd| mdconfig -a -t malloc -s 5M -u 9
+| newfs /dev/md9
+| mkdir -p /tmp/etc
+| mount /dev/md9 /tmp/etc
+| cp -a /etc/* /tmp/etc/}}
+{{RootCmd| umount /tmp/etc
+| mount /dev/md9 /etc
+| passwd
+| echo "PermitRootLogin yes" &gt;&gt; /etc/ssh/sshd_config
+| /etc/rc.d/sshd onestart}}
 
 Please connect with any ssh client. The username is root.
 
-==== Setting the partition ====
+==== Setting the Partition ====
+The installation target device of serial ATA and IDE are /dev/ada*.
+SCSI and USB drive are /dev/da*.
+Please identify the HDD using ls /dev/ada* or dmesg | grep ada.
+In this case, the device is ada0. 
 
-{{Important|{{Package|sys-boot/grub2}} doesn't have KEYWORDS{{=}}"~amd64-fbsd ~x86-fbsd" yet. {{Package|sys-freebsd/boot0}} is recommended for bootloader on Gentoo FreeBSD.}}
-
-{{Note|If you want to use GRUB2, you need 1 MB free space at the beginning of the disk (MBR) or bios-boot partition (GPT). GRUB2 cannot find freebsd-boot partition. Please set the bios-boot (GPT).}}
-
-You need to find out the device name to install. You can get it with <code>ls /dev/*da*</code> or <code>dmesg | grep 'da[0-9]'</code>. In this case, it's ada0:
-
-{{Note|If you are using serial ATA & IDE drives, the device name is /dev/ada*. If you are using SCSI & USB drives, it's /dev/da*.}}
-
-{{RootCmd|dmesg {{!}} grep 'da[0-9]'|output=<pre>
-ada0 at ata0 bus 0 scbus0 target 0 lun 0
-ada0: <QEMU HARDDISK 0.15.> ATA-7 device
+{{RootCmd|<nowiki>dmesg | grep ada</nowiki>|output=
+<pre>ada0 at ata0 bus 0 scbus0 target 0 lun 0
+ada0: &lt;QEMU HARDDISK 0.15.0&gt; ATA-7 device
 ada0: 16.700MB/s transfers (WDMA2, PIO 8192bytes)
 ada0: 12288MB (25165824 512 byte sectors: 16H 63S/T 16383C)
-ada0: Previously was known as ad0
-</pre>}}
+ada0: Previously was known as ad0</pre>}}
 
-===== Using the UFS2 file system (GPT) =====
+Next, set the partition.
+This example is simple only two partitions.
+If necessary, you can split /, /usr, /var, /tmp, and /home.
+Please set using gpart.
 
-{{Note|GPT partition is the standard FreeBSD 9.0. Please read the next MBR section if using a MBR partition.}}
-
-If you follow this example, you will create simple two partitions. If necessary, you can split {{Path|/}}, {{Path|/usr}}, {{Path|/var}}, {{Path|/tmp}}, and {{Path|/home}}. Please set with the gpart. 
-
-{| class="wikitable"
+{|
 ! Partition
 ! Filesystem
 ! Size
 ! Description
 |-
-|{{Path|/dev/ada0p1}}
+|/dev/ada0p1
 |none
 |just a bit
 |Reserved for bootloader
 |-
-|{{Path|/dev/ada0p2}}
+|/dev/ada0p2
 |UFS2 + SU
 |entire disk - swap space
 |Root partition
 |-
-|{{Path|/dev/ada0p3}}
+|/dev/ada0p3
 |swap
 |Rest of the disk
 |Swap partition
 |}
+{{RootCmd| gpart create -s GPT ada0
+| gpart add -b 34 -s 128 -t freebsd-boot ada0
+| gpart add -s 10G -t freebsd-ufs -l root ada0
+| gpart add -t freebsd-swap -l swap ada0}}
 
-{{Note|Please add options <code>-a 4k</code> to gpart add command of all, if you have AFT drive (4096 bytes/sector). The start of the partition is properly configured, you can get the best performance.}}
-
-====== Using FreeBSD's default bootloader (recommended) ======
-
-{{RootCmd
-|gpart create -s GPT ada0
-|gpart add -s 64k -t freebsd-boot ada0
-|gpart add -s 10G -t freebsd-ufs -l root ada0
-|gpart add -t freebsd-swap -l swap ada0
-}}
-
-Please run gpart show in order to confirm results. 
+Please run gpart show in order to verify the partition could be set. 
 
 {{RootCmd|gpart show|output=
 <pre>
@@ -200,274 +116,94 @@ Please run gpart show in order to confirm results.
        162  20971520     2  freebsd-ufs  (10G)
   20971682   4194109     3  freebsd-swap  (2G)</pre>}}
 
-Results when you create a partition with option -a 4k.
-
-{{RootCmd|gpart show|output=
-<pre>
-=&gt;      34  25165757  ada0  GPT  (12G)
-        34         6        - free -  (3.0k)
-        40       128     1  freebsd-boot  (64k)
-       168  20971520     2  freebsd-ufs  (10G)
-  20971688   4194096     3  freebsd-swap  (2G)
-  25165784         7        - free -  (3.5k)
-</pre>}}
-
-====== Using grub2. [Experimental] ======
-
-{{RootCmd
-|gpart create -s GPT ada0
-|gpart add -s 1024k -t bios-boot ada0 
-|gpart add -s 10G -t freebsd-ufs -l root ada0
-|gpart add -t freebsd-swap -l swap ada0
-}}
-
-===== Using the UFS2 file system (MBR) =====
-
-{| class="table table-striped table-condensed"
-! Partition
-! Filesystem
-! Size
-! Description
-|-
-|{{Path|/dev/ada0s1a}}
-|UFS2 + SU
-|entire disk - swap space
-|Root partition
-|-
-|{{Path|/dev/ada0s1b}}
-|swap
-|Rest of the disk
-|Swap partition
-|}
-
-====== Using FreeBSD's default bootloader (recommended) ======
-
-{{RootCmd
-|gpart create -s mbr ada0
-|gpart add -t freebsd ada0
-|gpart set -a active -i 1 ada0
-|gpart create -s bsd ada0s1
-|gpart add -s 10G -t freebsd-ufs ada0s1
-|gpart add -t freebsd-swap ada0s1
-}}
-
-====== Using GRUB2 (experimental) ======
-
-{{RootCmd
-|gpart create -s mbr ada0
-|gpart add -b 1024k -t freebsd ada0
-|gpart set -a active -i 1 ada0
-|gpart create -s bsd ada0s1
-|gpart add -s 10G -t freebsd-ufs ada0s1
-|gpart add -t freebsd-swap ada0s1
-}}
-
-===== Using the ZFS file system (experimental) / (GPT) =====
-
-====== Using FreeBSD's default bootloader (recommended) ======
-
-{{RootCmd
-|gpart create -s GPT ada0
-|gpart add -s 64k -t freebsd-boot ada0
-|gpart add -t freebsd-zfs -l zfs-system ada0
-}}
-
-====== Using GRUB2 (experimental) ======
-
-{{RootCmd
-|gpart create -s GPT ada0
-|gpart add -s 1024k -t bios-boot ada0
-|gpart add -t freebsd-zfs -l zfs-system ada0
-}}
-
 ==== Creating and mounting a file system ====
-
-===== Using the UFS2 file system =====
-
-Please don't forget newfs <code>-L</code> option to label. 
-
-{{Note|Add option <code>-j</code> to newfs to enable soft updates journaling. Add option <code>-t</code> to enable TRIM.}}
-
-Your choice GPT:
+You can select the UFS and ZFS in FreeBSD.
+However, this guide is not intended ZFS.
+Please do not forget newfs -L option to label. 
 
 {{RootCmd|newfs -L gfbsdroot -U /dev/ada0p2}}
+And mount it. 
+{{RootCmd|mount /dev/ufs/gfbsdroot /mnt
+|swapon /dev/gpt/swap}}
 
-Your choice MBR:
-
-{{RootCmd|newfs -L gfbsdroot -U /dev/ada0s1a}}
-
-And mount it:
-
-{{RootCmd
-|mount /dev/ufs/gfbsdroot /mnt
-|swapon /dev/gpt/swap (GPT)
-|swapon /dev/ada0s1b (MBR)
-}}
-
-===== Using the ZFS file system (experimental) =====
-
-Load the kernel module in order to enable ZFS:
-
-{{RootCmd|kldload zfs}}
-
-Prepare the RAM disk to write {{Path|/boot/zfs/zpool.cache}}:
-
-{{RootCmd|mount -t tmpfs tmpfs /boot/zfs}}
-
-Please use gnop if you have 4KB/sector HDD. You can get the best performance:
-
-{{RootCmd|gnop create -S 4096 /dev/gpt/zfs-system}}
-
-Creates a new storage pool. When using gnop, please specify {{Path|/dev/gpt/zfs-system.nop}} instead of {{Path|/dev/gpt/zfs-system}}.
-
-{{RootCmd|zpool create zsys /dev/gpt/zfs-system
-|zfs set mountpoint{{=}}none zsys}}
-
-Creates a new ZFS file system:
-
-{{RootCmd
-|zfs create zsys/root
-|zfs set mountpoint{{=}}/mnt zsys/root
-|zfs mount -a
-|zfs create zsys/root/usr
-|zfs create zsys/root/var}}
-{{RootCmd|zfs create zsys/root/tmp
-|zfs create zsys/home
-|zfs create -V 8gb zsys/swap
-|zfs set org.freebsd:swap{{=}}on zsys/swap
-|zfs set checksum{{=}}off zsys/swap
-}}
-
-{{RootCmd
-|mkdir /mnt/home
-|mount -t zfs zsys/home /mnt/home
-}}
-
-==== Downloading the stage3 tarball and Portage snapshot ====
-
-Now, Gentoo/FreeBSD 9.0 [[stage3]] is available for x86-fbsd. And Gentoo FreeBSD 9.1 [[stage3]] is available for amd64-fbsd.
-
-{{Important|If you want to use amd64-fbsd, please upgrade to 10.3 after the installation is complete. FreeBSD 9.1 is EOL on December 31, 2014. If you want to use x86-fbsd, please upgrade to 10.3 after the installation is complete. FreeBSD 9.0 is EOL on March 31, 2013.}}
-
-{{RootCmd
-|cd /mnt
-|fetch http://dev.gentoo.org/~aballier/fbsd9.0/x86/stage3-i686-freebsd-9.0.tar.bz2 (for x86-fbsd users)
-|fetch http://distfiles.gentoo.org/experimental/bsd/freebsd/stages/amd64-fbsd-9.1/stage3-amd64-freebsd-9.1.tar.bz2 (for amd64-fbsd users)
-|fetch http://distfiles.gentoo.org/snapshots/portage-latest.tar.bz2
-}}
-
-==== Unpacking stage3 and Portage snapshot ====
-
-{{Important|The following error may be displayed. Don't worry, please continue the installation. This problem will be fixed in 9.2. Details, see {{Bug|469454}}
-<pre>./bin/fuser: Can't create 'bin/fuser'
-tar: Error exit delayed from previous errors.
-</pre>}}
+==== Downloading the Stage3 Tarball and Portage snapshot ====
+Now, Gentoo/FreeBSD 9.0 stage3 is available.
 
 {{RootCmd|cd /mnt
-|setenv LANG "en_US.UTF-8"
-|tar xjpf stage3-*.tar.bz2 -C /mnt
-|tar xjf portage-latest.tar.bz2 -C /mnt/usr
-}}
+|fetch http://dev.gentoo.org/~aballier/fbsd9.0/x86/stage3-i686-freebsd-9.0.tar.bz2 (for x86-fbsd users)
+|fetch http://dev.gentoo.org/~aballier/fbsd9.0/amd64/stage3-amd64-freebsd-9.0.tar.bz2 (for amd64-fbsd users)
+|fetch http://distfiles.gentoo.org/snapshots/portage-latest.tar.bz2}}
 
-==== Entering the new environment ====
+==== Unpacking stage3 and Portage snapshot ====
+{{RootCmd|cd /mnt
+| sh
+| export LANG="en_US.UTF-8"
+| tar xjpf stage3-*.tar.bz2
+| tar xjf portage-latest.tar.bz2 -C /mnt/usr}}
 
+==== Entering the new Environment ====
 {{RootCmd|mount -t devfs devfs /mnt/dev
 |cp /etc/resolv.conf /mnt/etc/
 |chroot /mnt /bin/bash}}
 
 === Settings and install more in chroot environment ===
-
 ==== The first settings and time zone settings ====
+etc-update and time zone settings. Of course, you can modify /etc/make.conf. 
 
-env-update and time zone settings. Of course, you can modify {{Path|/etc/portage/make.conf}}. 
-
-{{RootCmd|env-update && source /etc/profile
+{{RootCmd|etc-update && source /etc/profile
 |cp /usr/share/zoneinfo/GMT /etc/localtime (please select your time zone)
-|emerge -u sys-apps/portage ; emerge sys-devel/libtool app-admin/eselect
-|emerge app-editors/nano
-|mv /etc/make.conf /etc/portage/ (if /etc/make.conf is exist.)
-|nano -w /etc/portage/make.conf (if necessary)
-|prompt=(chroot) root #}}
-
-==== Bug fixes (for x86-fbsd users, 9.0 stage3 only) ====
-
-Bugs have been fixed in several packages. Please upgrade them. For details, see {{Bug|324445}}, {{Bug|412319}}, {{Bug|417031}}, and {{Bug|421191}}.
-
-{{RootCmd|emerge sys-devel/gcc-config
-|emerge sys-freebsd/freebsd-mk-defs sys-freebsd/freebsd-lib app-arch/libarchive dev-libs/libedit
-|prompt=(chroot) root #}}
-
-==== Special settings for ZFS ====
-
-If you select ZFS file system, the following additional work is required.
-
-{{RootCmd|emerge flaggie
-|flaggie +zfs
-|emerge sys-devel/flex
-|emerge sys-freebsd/freebsd-cddl
-|emerge sys-freebsd/freebsd-lib sys-freebsd/freebsd-ubin sys-freebsd/boot0
+|emerge nano
+|nano -w /etc/make.conf (if necessary)
 |prompt=(chroot) root #}}
 
 ==== Installing a kernel source ====
+Unlike Gentoo/Linux, freebsd-source package is the only sources.
 
-Unlike Gentoo/Linux, freebsd-sources package is the only sources.
-
-{{RootCmd|USE{{=}}symlink emerge freebsd-sources
+{{RootCmd|<nowiki>USE=symlink emerge freebsd-sources</nowiki>
 |prompt=(chroot) root #}}
 
 ==== Compiling and installing kernel ====
-
 Now let's compile the kernel.
-For more information see the [https://www.freebsd.org/doc/handbook/kernelconfig.html FreeBSD Handbook].
+Copy the GENERIC in conf, you can change it by changing the kernel configuration.
+For more information [http://www.freebsd.org/doc/handbook/kernelconfig.html FreeBSD Handbook] please see.
 
-{{RootCmd|emerge -u sys-devel/flex
+{{RootCmd|emerge flex
+|<nowiki>ACCEPT_KEYWORDS="~x86-fbsd" emerge '&lt;gcc-config-1.7'</nowiki>
 |cd /usr/src/sys/i386/conf (case of x86-fbsd)
 |cd /usr/src/sys/amd64/conf (case of amd64-fbsd)
 |cp GENERIC.hints /boot/device.hints
 |prompt=(chroot) root #}}
-
 {{RootCmd|config GENERIC
 |cd ../compile/GENERIC
 |make cleandepend &amp;&amp; make depend &amp;&amp; make -j3 &amp;&amp; make install
 |prompt=(chroot) root #}}
 
-==== System settings ====
+==== Installing the boot loader ====
+Let's install a boot loader to boot the Gentoo/FreeBSD.
+Boot loader configuration is done after exiting the chroot.
 
-Familiar settings. Please refer to [[Gentoo Handbook]] for more information.
+{{RootCmd|emerge sys-freebsd/boot0
+|prompt=(chroot) root #}}
 
-When selecting UFS2:
+==== System setting ====
+Familiar setting. 
+Please refer to [http://www.gentoo.org/doc/en/handbook/handbook-amd64.xml?part=1&amp;chap=8 Gentoo Linux Handbook] if you need more information.
 
 {{RootCmd|nano -w /etc/fstab|output=
 <pre># Device	Mountpoint	FStype	Options	Dump	Pass#
 /dev/ufs/gfbsdroot	/		ufs	rw	1	1
-
-#your choice GPT (don't forget comment out)
-#/dev/gpt/swap	none		swap	sw	0	0
-
-#your choice MBR (don't forget comment out)
-#/dev/ada0s1b	none		swap	sw	0	0
-</pre>
-|prompt=(chroot) root #}}
-
-If you select ZFS.  Note that the Pass# column should be zero for ZFS, because it cannot be checked by fsck.
-{{RootCmd|nano -w /etc/fstab|output=
-<pre># Device	Mountpoint	FStype	Options	Dump	Pass#
-#/dev/ad0s1a	/		ufs	rw	1	1
-#/dev/ad0s1b	none		swap	sw	0	0
-zsys/root	/		zfs	rw	0	0
+/dev/gpt/swap	none		swap	sw	0	0
 </pre>
 |prompt=(chroot) root #}}
 
 Setting the host name
-
 {{RootCmd|nano -w /etc/conf.d/hostname|output=
-<pre># (Set the hostname variable to your host name.  On BSD this is expected to be the FQDN.)
-hostname="daemon.homenetwork"
+<pre># (Set the hostname variable to your host name)
+hostname="daemon"
 </pre>
 |prompt=(chroot) root #}}
 
-Editing network settings
-
+Editing network setting
 {{RootCmd|nano -w /etc/conf.d/net|output=
 <pre># (Set the dns_domain variable to your domain name)
 dns_domain_lo="homenetwork"
@@ -482,22 +218,9 @@ config_em0="dhcp"
 |prompt=(chroot) root #}}
 
 Adding net.em0 to the default runlevel
-
 {{RootCmd|cd /etc/init.d
 |ln -s net.lo0 net.em0
 |rc-update add net.em0 default
-|prompt=(chroot) root #}}
-
-Setting keymap
-
-Please edit {{Path|/etc/conf.d/syscons}} if you want to change the keymap.
-
-{{RootCmd|nano -w /etc/conf.d/syscons
-|prompt=(chroot) root #}}
-
-A list of the keymap is available with the following command.
-
-{{RootCmd|ls -1 /usr/share/syscons/keymaps {{!}} less
 |prompt=(chroot) root #}}
 
 Setting the root password
@@ -505,263 +228,225 @@ Setting the root password
 {{RootCmd|passwd
 |prompt=(chroot) root #}}
 
-Adding a user for daily use (sample)
+You can also be configured to run at startup <i>sshd</i>.
 
-{{RootCmd|adduser
-|output=
-<pre>Username: yournickname
-Full name:
-Uid (Leave empty for default):
-Login group [yournickname]:
-Login group is yournickname. Invite yournickname into other groups? []: wheel
-Login class [default]:
-Shell (bash csh esh fish ksh sash sh tcsh zsh nologin) [sh]: bash
-Home directory [/home/yournickname]:
-Home directory permissions (Leave empty for default):
-Use password-based authentication? [yes]:
-Use an empty password? (yes/no) [no]:
-Use a random password? (yes/no) [no]:
-Enter password:
-Enter password again:
-Lock out the account after creation? [no]:
-Username   : yournickname
-Password   : *****
-Full Name  :
-Uid        : 1001
-Class      :
-Groups     : yournickname wheel
-Home       : /home/yournickname
-Home Mode  :
-Shell      : /bin/bash
-Locked     : no
-OK? (yes/no): yes
-adduser: INFO: Successfully added (yournickname) to the user database.
-Add another user? (yes/no): no
-Goodbye!
-</pre>
-|prompt=(chroot) root #}}
-
-You can run at startup {{c|sshd}}:
-
-{{RootCmd
-|emerge -u net-misc/openssh
+{{RootCmd|ACCEPT_KEYWORDS="~x86-fbsd" emerge openssh
 |rc-update add sshd default
-|prompt=(chroot) root #
-}}
-
-===== Special settings for ZFS =====
-
-When using the ZFS file system, the following additional work is required:
-
-{{RootCmd|rc-update add zfs boot
-|rc-update add zvol default
-|echo 'zfs_load{{=}}"YES"' >> /boot/loader.conf
-|echo 'vfs.root.mountfrom{{=}}"zfs:zsys/root"' >> /boot/loader.conf
-|prompt=(chroot) root #}}
-
-===== Special settings for virtual machine =====
-
-When installing on a virtual machine, the following additional configuration is required:
-
-{{RootCmd|echo 'kern.hz{{=}}100' >> /boot/loader.conf
 |prompt=(chroot) root #}}
 
 ==== Installing the required packages ====
-
-To use DHCP, {{Package|net-misc/dhcpcd}} is required:
-
-{{RootCmd|emerge net-misc/dhcpcd
+If dhcpcd is required if you use DHCP.
+{{RootCmd|<nowiki>ACCEPT_KEYWORDS="~x86-fbsd" emerge dhcpcd</nowiki>
 |prompt=(chroot) root #}}
 
-==== Installing the boot loader ====
-
-Install a boot loader to boot the Gentoo FreeBSD:
-
-{{RootCmd|emerge sys-freebsd/boot0
-|prompt=(chroot) root #}}
-
-Please see [[Gentoo_FreeBSD/Experimental#How to use sys-boot/grub2|this section]] if you want to use GRUB2. But it is experimental!
-
-==== Setting boot loader ====
-
-Let's prepare for using {{Package|sys-freebsd/boot0}}.
-
-If you select UFS2 (GPT):
-
-{{RootCmd|gpart bootcode -b /boot/pmbr ada0
-|gpart bootcode -p /boot/gptboot -i 1 ada0
-|prompt=(chroot) root #}}
-
-If you select UFS2 (MBR):
-
-{{RootCmd|gpart bootcode -b /boot/boot0 ada0
-|gpart bootcode -b /boot/boot ada0s1
-|prompt=(chroot) root #}}
-
-If you select ZFS (GPT):
-
-{{RootCmd|gpart bootcode -b /boot/pmbr ada0
-|gpart bootcode -p /boot/gptzfsboot -i 1 ada0
-|prompt=(chroot) root #}}
-
-==== Exiting the chroot ====
-
-Exit from the chroot environment: 
+==== Exit from chroot environment ====
+Work done in the chroot environment.
+exit from chroot environment.
 
 {{RootCmd|exit
 |prompt=(chroot) root #}}
 
-=== Cleaning up and setting the remaining ===
+=== Writes boot loader and Cleaning up ===
+Do you want to reboot now ? Just a minute. We forgot to setting the boot loader.
+{{RootCmd|gpart bootcode -b /mnt/boot/pmbr ada0
+|gpart bootcode -p /mnt/boot/gptboot -i 1 ada0}}
 
-Do you want to reboot now? Just a minute. ZFS users must make few more setting changes.
+Unmount the partition.
 
-==== Special settings for ZFS ====
+{{RootCmd|cd /
+|umount /mnt/dev
+|umount /mnt}}
 
-If you select ZFS file system, the following additional work is required.
-
-{{RootCmd|umount /mnt/dev
-|cd /
-|zpool set bootfs{{=}}zsys/root zsys
-|zpool export zsys
-|gnop destroy /dev/gpt/zfs-system.nop (please run if you are using gnop)}}
-
-{{RootCmd|zpool import zsys
-|mkdir /mnt/boot/zfs
-|cp /boot/zfs/zpool.cache /mnt/boot/zfs/
-|zfs unmount -a}}
-{{RootCmd|zfs set mountpoint{{=}}none zsys
-|zfs set mountpoint{{=}}/usr zsys/root/usr
-|zfs set mountpoint{{=}}/var zsys/root/var
-|zfs set mountpoint{{=}}/tmp zsys/root/tmp
-|zfs set mountpoint{{=}}/home zsys/home
-|zfs set mountpoint{{=}}legacy zsys/root}}
-
-==== Reboot! ====
-
-No problems? You can now reboot. Don't forget to remove the installation media.
+Don't have a problem? Now we restart.
+Don't forget to remove the Installation CD of FreeBSD.
 
 {{RootCmd|shutdown -r now}}
 
-== Running Gentoo FBSD in vanilla FreeBSD's jail ==
+== Major Upgrade howto ==
+This guide will show you how to upgrade Gentoo/FreeBSD 9.0 from 8.x version.
+=== Preparation ===
+==== Updating the @system ====
+The update to eliminate the problems caused by outdated versions of installed packages.
+{{RootCmd|emerge -uDN system}}
 
-Details of jail, please see the [https://www.freebsd.org/handbook/jails.html FreeBSD Handbook].
+==== Change profile ====
+To emerge related to FreeBSD 9.0 is necessary to change the profile.
+{{RootCmd|cd /etc
+rm make.profile}}
 
-=== Preparing directory ===
+x86-fbsd users)
+{{RootCmd|ln -s ../usr/portage/profiles/default/bsd/fbsd/x86/9.0 make.profile}}
+amd64-fbsd users)
+{{RootCmd|ln -s ../usr/portage/profiles/default/bsd/fbsd/amd64/9.0 make.profile}}
 
-{{RootCmd
-|mkdir -p /usr/jail/gfbsd
-|cd /usr/jail/gfbsd}}
+==== Kernel update ====
+First of all, you need to update your kernel.
+It is because the package of a userland may use the new function of a kernel. 
 
-=== Downloading and unpacking the stage3 tarball and Portage snapshot ===
+Please be sure to update a kernel first !
 
-{{RootCmd
-|fetch http://dev.gentoo.org/~aballier/fbsd9.0/x86/stage3-i686-freebsd-9.0.tar.bz2 (for x86-fbsd users)
-|fetch http://distfiles.gentoo.org/experimental/bsd/freebsd/stages/amd64-fbsd-9.1/stage3-amd64-freebsd-9.1.tar.bz2 (for amd64-fbsd users)
-|fetch http://distfiles.gentoo.org/snapshots/portage-latest.tar.bz2
-|tar xjpf stage3-*.tar.bz2
-|tar xjf portage-latest.tar.bz2 -C /usr/jail/gfbsd/usr
-}}
+{{RootCmd|<nowiki>USE=symlink emerge freebsd-sources flex</nowiki>
+|<nowiki>ACCEPT_KEYWORDS="~x86-fbsd" emerge '&lt;gcc-config-1.7'</nowiki>
+|cd /usr/src/sys/i386/conf (case of x86-fbsd)
+|cd /usr/src/sys/amd64/conf (case of amd64-fbsd)
+|cp GENERIC.hints /boot/device.hints}}
+{{RootCmd|config GENERIC
+|cd ../compile/GENERIC
+|make cleandepend &amp;&amp; make depend &amp;&amp; make -j3 &amp;&amp; make install}}
 
-=== Setting ===
+Don't have a problem? Now we restart.
 
-Configure the jail to start with FreeBSD:
+{{RootCmd|shutdown -r now}}
 
-{{FileBox|filename=/etc/rc.conf|title=Example for starting the jail at boot time|lang=bash|1=
-jail_enable="YES"
-jail_list="gfbsd"
+After rebooting your machine, please check if the kernel is new. 
 
-jail_gfbsd_rootdir="/usr/jail/gfbsd"
-jail_gfbsd_hostname="gfbsd.example.org"
-jail_gfbsd_devfs_enable="YES"
-
-# You will need to add the following line if you want network access.
-# Please specify your network devices instead of em0.
-jail_gfbsd_interface="em0"
-jail_gfbsd_ip="192.168.0.10"
-}}
-
-Setting to operate Gentoo/FreeBSD in the jail:
-
-{{RootCmd|echo 'rc_sys{{=}}"jail"' >> /usr/jail/gfbsd/etc/rc.conf
-|echo 'hostname{{=}}"gfbsd"' > /usr/jail/gfbsd/etc/conf.d/hostname
-|echo 'syslogd_args{{=}}"-ss"' >> /usr/jail/gfbsd/etc/conf.d/syslogd}}
-
-{{RootCmd|chroot /usr/jail/gfbsd /bin/bash}}
-
-{{RootCmd
-|rc-update add vixie-cron default
-|exit
-|prompt=(chroot) root #}}
-
-=== Run jail ===
-
-Run jail:
-
-{{RootCmd|/etc/rc.d/jail start}}
-
-You can check that it worked:
-
-{{RootCmd|jls|output=
-<pre>
-   JID  IP Address      Hostname                      Path
-     1  192.168.0.10    gfbsd                         /usr/jail/gfbsd
+{{RootCmd|uname -a|output=
+<pre>FreeBSD daemon 9.0-Gentoo FreeBSD Gentoo 9.0 #0: Fri Jan 20 00:01:04 JST 2012
+     root@daemon:/usr/src/sys-9.0-r0/amd64/compile/GENERIC  amd64
 </pre>}}
 
-Enter the jail environment with the {{c|jexec}} command:
+==== Backup of the library ====
+Please backup your 8.x library.
+When a problem occurs, will help solve the problem. 
 
-{{RootCmd|jexec 1 /bin/bash}}
+{{RootCmd|mkdir -p /var/tmp/8-bkp/usr
+|cp -a /lib64 /var/tmp/8-bkp/
+|cp -a /libexec /var/tmp/8-bkp/
+|cp -a /usr/lib64 /var/tmp/8-bkp/usr/
+}}
 
-== Developing for Gentoo/FreeBSD ==
+=== Updating userland ===
+The first emerge the core library. 
 
-=== How to help ===
+{{RootCmd|emerge -1 freebsd-mk-defs
+|<nowiki>LD_LIBRARY_PATH="/var/tmp/8-bkp/libexec:/var/tmp/8-bkp/lib64:/var/tmp/8-bkp/usr/lib64"</nowiki> emerge -C dev-libs/libedit
+|<nowiki>LD_LIBRARY_PATH="/var/tmp/8-bkp/libexec:/var/tmp/8-bkp/lib64:/var/tmp/8-bkp/usr/lib64"</nowiki> emerge -1 --nodeps freebsd-lib}}
 
-There are many things you could help with, depending on one's skill level and spare time:
+Some changes to the file name of the library.
+Create a symbolic link to the previous file name.
+After all packages are recreated, you'll be able to remove the symbolic link.
 
-* Working on current ebuilds: this means working closely with ebuild maintainers in order to create patches or modify ebuilds in a way that can be accepted into the Gentoo ebuild repository.
-* Security: if you are into security, we need you! Although security advisories from the FreeBSD project are tracked and fixed, we can always use help in this area.
-* Contacts: we need people who can get in touch with FreeBSD developers to maintain contacts between us and the original project to exchange patches and discuss various problems and their solutions. Note that this should never involve any kind of spamming of mailing lists or IRC channels.
-* Testing: the more people are actively using Gentoo FreeBSD, the more bugs will be discovered, which helps us improving the quality of the port. If you are good at describing bugs or problems, we definitely want to hear from you.
-* Other areas where we need help include: system ebuilds, creation of installation CDs, documentation, kernel hacking.
+{{RootCmd|rm /lib64/libutil.so.8 /lib64/libedit.so.0
+|ln -s libutil.so.9 /lib64/libutil.so.8
+|ln -s libedit.so.7 /lib64/libedit.so.0}}
+
+Update the userland of FreeBSD.
+
+{{RootCmd|emerge -a1 boot0 freebsd-bin freebsd-contrib freebsd-lib freebsd-libexec freebsd-mk-defs freebsd-pam-modules freebsd-sbin freebsd-share freebsd-ubin freebsd-usbin}}
+
+Change CHOST, and emerge binutils gcc. (FYI, [http://www.gentoo.org/doc/en/change-chost.xml Changing the CHOST variable])
+
+x86-fbsd users)
+{{RootCmd|<nowiki>gsed -i 's:CHOST=.*:CHOST="i686-gentoo-freebsd9.0":g' /etc/make.conf</nowiki>}}
+amd64-fbsd users)
+{{RootCmd|<nowiki>gsed -i 's:CHOST=.*:CHOST="x86_64-gentoo-freebsd9.0":g' /etc/make.conf</nowiki>}}
+
+{{emerge|params=-1
+|sys-devel/binutils
+|sys-devel/gcc}}
+
+{{RootCmd|gcc-config -l|output=
+<pre> [1] x86_64-gentoo-freebsd8.2-4.3.4
+ [2] x86_64-gentoo-freebsd8.2-4.4.5
+ [3] x86_64-gentoo-freebsd9.0-4.5.3 *
+</pre>}}
+
+remove 8.x stuff.
+
+{{RootCmd|emerge -C '&lt;gcc-4.5'}}
+
+{{RootCmd|gcc-config -c|output=
+x86_64-gentoo-freebsd9.0-4.5.3}}
+
+also check binutils
+
+{{RootCmd|binutils-config -l|output=
+<pre> [1] x86_64-gentoo-freebsd9.0-2.20.1 *
+</pre>}}
+
+{{RootCmd|binutils-config -c|output=
+x86_64-gentoo-freebsd9.0-2.20.1}}
+
+remove FreeBSD 8.x env data.
+
+{{RootCmd|cd /etc/env.d/
+|grep gentoo-freebsd8. *|output=
+<pre>
+05gcc-x86_64-gentoo-freebsd8.2:MANPATH="/usr/share/gcc-data/x86_64-gentoo-freebsd8.2/4.5.3/man"
+05gcc-x86_64-gentoo-freebsd8.2:INFOPATH="/usr/share/gcc-data/x86_64-gentoo-freebsd8.2/4.5.3/info"
+05gcc-x86_64-gentoo-freebsd8.2:LDPATH="/usr/lib/gcc/x86_64-gentoo-freebsd8.2/4.5.3:/usr/lib/gcc/x86_64-gentoo-freebsd8.2/4.4.5:/usr/lib/gcc/x86_64-gentoo-freebsd8.2/4.3.4"
+05gcc-x86_64-gentoo-freebsd8.2:PATH="/usr/x86_64-gentoo-freebsd8.2/gcc-bin/4.5.3"
+05gcc-x86_64-gentoo-freebsd8.2:ROOTPATH="/usr/x86_64-gentoo-freebsd8.2/gcc-bin/4.5.3"
+</pre>}}
+
+target file name is 05gcc-x86_64-gentoo-freebsd8.2 in this case.
+
+{{RootCmd|rm 05gcc-x86_64-gentoo-freebsd8.2
+|env-update &amp;&amp; source /etc/profile
+|emerge -av1 libtool
+|/usr/share/gcc-data/x86_64-gentoo-freebsd9.0/4.5.3/fix_libtool_files.sh 4.5.3 --oldarch x86_64-gentoo-freebsd8.2
+}}
+
+Some packages need emerge first.
+
+{{RootCmd|emerge -1 libiconv
+|ln -s libiconv.so.2 /lib64/libiconv.so.7}}
+
+Recreate all packages.
+
+{{RootCmd|emerge -ae world}}
+
+Failure to compile the package if any, 'emerge --resume --skipfirst' is your friend.
+Also, please bug report the problem if you like.
+
+=== Cleaning ===
+Let's remove the backup files when you have finished all the steps.
+{{RootCmd|chflags -R noschg /var/tmp/8-bkp/*
+|rm -rf /var/tmp/8-bkp
+|rm /lib64/libutil.so.8 /lib64/libedit.so.0 /lib64/libiconv.so.7}}
 
 == Troubleshooting ==
+=== amd64-fbsd ===
+==== can not boot a kernel panic always occurs ====
+Details, see {{Bug|408019}}
 
-=== Architecture independent issues ===
+workaround is to use gcc 4.3 to compile the kernel.
+
+==== amd64 kernel + x86 stage environment, tar will not work successfully. ====
+Details, see {{Bug|413865}}
+
+Error messages:
+<pre>
+tar: getvfsbyname failed: No such file or directory
+tar: Error exit delayed from previous errors.
+</pre>
+
+workaround fix
+{{RootCmd|<nowiki>emerge =libarchive-3.0.3</nowiki>}}
+
+=== common ===
+==== Emerge fails net-misc/openssh ====
+Details, see {{Bug|391011}}
+
+workaround fix for openssh
+{{RootCmd|<nowiki>EXTRA_ECONF='--disable-utmp --disable-wtmp --disable-wtmpx' ACCEPT_KEYWORDS=~x86-fbsd emerge '>net-misc/openssh-6.0'</nowiki>}}
 
 ==== Emerge fails app-misc/screen ====
+Details, see {{Bug|393039|409819}}.
 
-For details see {{Bug|393039}} and {{Bug|409819}}.
-
-Please use {{Package|app-misc/tmux}} instead of {{Package|app-misc/screen}}.
+Please use app-misc/tmux instead of app-misc/screen.
 
 ==== lex: not found ====
-
 {{emerge|sys-devel/flex}}
 
 ==== cc: not found ====
+Details, see {{Bug|412319}}
 
-For details see {{Bug|412319}}:
+{{RootCmd|<nowiki>ACCEPT_KEYWORDS="~x86-fbsd" emerge '&lt;gcc-config-1.7'</nowiki>}}
 
-{{RootCmd|emerge '>{{=}}sys-devel/gcc-config-1.7.1'}}
+==== freebsd-cddl-9.0 has some issues. ====
+Details, see {{Bug|414479|414879|415129}}.
 
-== Contacts ==
-
-* gentoo-bsd mailing list ([https://archives.gentoo.org/gentoo-bsd/ Gentoo Mailing Lists])
-* IRC channel {{IRC|gentoo-bsd}} on Freenode ([https://gentoo.org/get-involved/irc-channels/all-channels.html Gentoo Linux IRC channels list])
-
-== See also ==
-
-* [[Gentoo FreeBSD/Upgrade Guide]] - A sub-article on upgrading a G/FBSD system.
-* [[Gentoo FreeBSD/Experimental]] - A sub-article that contains attempts to implement some uncommon features.
-* [[Gentoo FreeBSD/Developers Note]] - A sub-article of developers note.
-* [[Gentoo Alt/Contributor's Guide]] - A Gentoo Alt contributor's guide (deprecated).
-* [[Project:Gentoo/Staffing_Needs]] - An article that lists the ways users can help.
-* [[Handbook:Main Page|Gentoo Linux Handbook]]
-
-== External resources ==
-
-* [https://www.freebsd.org/handbook/ FreeBSD Handbook]
-* [https://www.freebsd.org/cgi/man.cgi FreeBSD Man Pages]
-* [https://wiki.freebsd.org/ZFSTuningGuide ZFSTuningGuide - FreeBSD Wiki]
-* [https://wiki.freebsd.org/ FreeBSD Wiki]
-
-[[Category:Core system]]{{Migrated|originalauthors=Ignacio Arque-Latour, Michael Kohl, Otavio R. Piske, Aaron Walker, Chris White, {{dev|flameeyes}}, {{Dev|nightmorph}}, Camille Huot, {{Dev|klondike}}}}
+== Links ==
+*[http://www.gentoo.org/proj/en/gentoo-alt/bsd/fbsd/ Gentoo/FreeBSD Project page]
+*[http://www.gentoo.org/doc/en/gentoo-freebsd.xml A short guide to Gentoo/FreeBSD]
