--- a/KDE.mw
+++ b/KDE.mw
@@ -1,525 +1,40 @@
-<languages />
-
-<translate>
-
-<!--T:1-->
-{{InfoBox stack
-|{{InfoBox homepage|https://www.kde.org/|header=true}}
-|{{InfoBox wikipedia}}
-|{{InfoBox project|KDE}}
-}}
-
-<!--T:2-->
-'''KDE''' is a free software community, producing a wide range of applications including the popular Plasma desktop environment.
-
-<!--T:67-->
-Gentoo support for the KDE project is excellent, with comprehensive packaging of KDE Frameworks 5, Plasma 5, and Applications, as well as a wide array of other miscellaneous KDE-based software. 
-
-== Prerequisites == <!--T:9-->
-
-=== Profile === <!--T:10-->
-
-<!--T:11-->
-Choosing an appropriate [[Profile (Portage)|profile]], although not required, is recommended as it sets a number of global and package-specific USE flags to ease installation and ensure a smooth KDE experience.
-
-<!--T:66-->
-In order to choose the most suitable profile, first list what's available:
-
-<!--T:12-->
-{{RootCmd|eselect profile list|output=<pre>
-  [1]   default/linux/amd64/13.0
-  [2]   default/linux/amd64/13.0/selinux
-  [3]   default/linux/amd64/13.0/desktop
-  [4]   default/linux/amd64/13.0/desktop/gnome
-  [5]   default/linux/amd64/13.0/desktop/gnome/systemd
-  [6]   default/linux/amd64/13.0/desktop/plasma
-  [7]   default/linux/amd64/13.0/desktop/plasma/systemd
-  ...
-</pre>}}
-
-<!--T:13-->
-Then, select the right profile, substituting <code>X</code> with the appropriate profile number:
-
-<!--T:14-->
-{{RootCmd|eselect profile set X}}
-
-<!--T:16-->
-For Plasma 5 desktop environment choose <code>desktop/plasma</code> with [[OpenRC]] or <code>desktop/plasma/systemd</code> with [[systemd]].
-
-=== Services === <!--T:17-->
-
-<!--T:18-->
-Before installing KDE related software it is recommended that several other services are set up first. Part of that is done automatically if a ''desktop/plasma'' or ''desktop'' [[Profile (Portage)|profile]] is used. These services are: 
-* [[D-Bus]]: Enables use of the D-Bus message bus system.
-* [[polkit]]: Enables the polkit framework for controlling privileges for system-wide services.
-* [[udev]]: Enables support for udev Linux dynamic and persistent device naming.
-* [[udisks]]: Enables support for some storage related services.
-
-<!--T:19-->
-Follow the links for information how to set up these services. Note that other USE flag combinations than set in this profile may technically be possible (especially if selected applications are run instead of a full KDE Plasma desktop environment), but may be unsupported, untested, or lead to unexpected loss of functionality.
-
-=== X server === <!--T:20-->
-
-<!--T:21-->
-Read and follow the instructions in the [[X server]] article to setup the X environment.
-
-== Plasma == <!--T:72-->
-
-<!--T:73-->
-Plasma 5 is the current generation of KDE's desktop environment, based on Qt 5 and KDE Frameworks 5.
-
-=== Available versions === <!--T:101-->
-
-</translate>
-{| {{{!}} class{{=}}"table table-striped table-condensed"
-! style{{=}}"background: #31206C; color: white; white-space: nowrap;" | KDE
-! style{{=}}"background: #31206C; color: white; white-space: nowrap;" | Gentoo
-! style{{=}}"background: #31206C; color: white; white-space: nowrap;" | Ebuild repository
-! style{{=}}"background: #31206C; color: white; white-space: nowrap;" | Status
-|-
-| KDE Plasma 5.8.6 LTS
-| kde-plasma/plasma-meta-5.8.6
-| gentoo
-| Stable for {{Keyword|amd64}} and {{Keyword|x86}}; Testing for {{Keyword|arm}}
-|-
-| KDE Plasma 5.8.7 LTS
-| kde-plasma/plasma-meta-5.8.7
-| gentoo
-| Testing for {{Keyword|amd64}}, {{Keyword|arm}} and {{Keyword|x86}}
-|-
-| KDE Plasma 5.8 stable branch
-| kde-plasma/plasma-meta-5.8.49.9999
-| [[KDE/Ebuild repository|KDE]]
-| Live version
-|-
-| KDE Plasma 5.9.5
-| kde-plasma/plasma-meta-5.9.5
-| gentoo
-| Testing for {{Keyword|amd64}}, {{Keyword|arm}} and {{Keyword|x86}}
-|-
-| KDE Plasma 5.10.1
-| kde-plasma/plasma-meta-5.10.1
-| gentoo
-| Testing for {{Keyword|amd64}}, {{Keyword|arm}} and {{Keyword|x86}}
-|-
-| KDE Plasma 5.10 stable branch
-| kde-plasma/plasma-meta-5.10.49.9999
-| [[KDE/Ebuild repository|KDE]]
-| Live version
-|-
-| KDE Plasma master branch
-| kde-plasma/plasma-meta-9999
-| [[KDE/Ebuild repository|KDE]]
-| Live version
-|}
-<translate>
-
-<!--T:80-->
-{{Note|Before proceeding, make sure to choose a Plasma profile.}}
-
-=== Installation === <!--T:82-->
-
-<!--T:83-->
-The {{Package|kde-plasma/plasma-meta}} package provides the full Plasma 5 suite, configured by the following USE flags:
-{{USEflag|package=kde-plasma/plasma-meta|desc=}}
-
-<!--T:84-->
-{{Emerge|kde-plasma/plasma-meta}}
-
-<!--T:85-->
-Alternatively, {{Package|kde-plasma/plasma-desktop}} provides the basic desktop, leaving users free to install only the extra packages they require:
-
-<!--T:86-->
-{{Emerge|kde-plasma/plasma-desktop}}
-
-<!--T:87-->
-{{Note|Please note that such installations will be missing important packages such as {{Package|kde-plasma/powerdevil}} (power management, suspend and hibernate options) and {{Package|kde-plasma/systemsettings}} if this alternative installation is used.}}
-
-=== Widgets === <!--T:52-->
-
-<!--T:76-->
-Many useful widgets are in the {{Package|kde-plasma/kdeplasma-addons}} package (already pulled in by {{package|kde-plasma/plasma-meta}}):
-
-<!--T:77-->
-{{Emerge|kde-plasma/kdeplasma-addons}}
-
-=== Display manager === <!--T:88-->
-
-<!--T:89-->
-[[SDDM]] (Simple Desktop Display Manager) is the recommended login manager and is pulled in automatically via {{package|kde-plasma/plasma-meta}} by default. This is the preferred option. Alternatively, [[LightDM]] can be used and pulled in by setting USE flag <code>-sddm</code> for {{package|kde-plasma/plasma-meta}}. Change the setting accordingly in {{Path| /etc/conf.d/xdm}}. Also, be sure to read through the [[SDDM]] page if further issues appear.
-
-[[SDDM]] does not yet support [[Multiseat|multiseat]], while [[LightDM]] does.
-
-==== No display manager ====
-
-Plasma can be started the old-fashioned way with <code>startx</code>, but extra care needs to be taken to ensure it gets a valid session. The following solution is limited to [[ConsoleKit]]:
-
-{{FileBox|filename=~/.xinitrc|lang=text|1=
-#!/bin/sh
-exec ck-launch-session dbus-launch --sh-syntax --exit-with-session startkde
-}}
-
-=== System tray ===
-
-Plasma 5 uses the StatusNotifier specification for systray icons <ref>http://blog.martin-graesslin.com/blog/2014/03/system-tray-in-plasma-next/</ref>. As not all applications have been ported to the new system, some workarounds exist <ref>http://blog.martin-graesslin.com/blog/2014/06/where-are-my-systray-icons/</ref>, and Plasma 5 has a means to convert old xembed-based system tray icons to StatusNotifier icons.
-
-The workaround is enabled by activating <code>legacy-systray</code> and GUI-specific (<code>gtk2</code>, <code>gtk3</code>, <code>qt4</code>) USE flags for {{package|kde-plasma/plasma-desktop}}.
-
-{{RootCmd|echo "kde-plasma/plasma-desktop legacy-systray gtk2 gtk3 qt4" >> /etc/portage/package.use/plasma-systray}}
-
-==== Pidgin ====
-
-{{Package|net-im/pidgin}} requires {{Package|x11-plugins/pidgin-indicator}}. After install, the ''Ubuntu Indicator'' plugin can be found under ''Tools | Plugins''.
-
-==== Skype ====
-
-Since {{Package|net-im/skype}} is a 32-bit binary, it is necessary to enable <code>abi_x86_32</code> on {{Package|dev-libs/sni-qt}}.
-
-{{RootCmd|echo "dev-libs/sni-qt abi_x86_32" >> /etc/portage/package.use/plasma-systray}}
-
-=== KWallet ===
-
-<!--T:122-->
-Many users will be introduced to {{Package|kde-frameworks/kwallet}}, Plasma's encrypted password storage, while adding a (wireless) network connection after login or adding E-Mail accounts in {{Package|kde-apps/kmail}}.
-
-<!--T:127-->
-For managing KWallets, importing and exporting passwords, there is {{Package|kde-apps/kwalletmanager}}:
-
-<!--T:128-->
-{{Emerge|kde-apps/kwalletmanager}}
-
-==== Recover passwords after failed migration ====
-
-On many systems, up until this point there had to be a second KWallet service present - {{Package|kde-apps/kwalletd}} was there to provide the same password storage functions to kdelibs4-based applications, such as <code>kde-apps/kmail:4</code>. With the upgrade to <code>5.34.0</code>, this is obsolete as one single {{Package|kde-frameworks/kwallet}} can take over requests from these old applications.
-
-If applications are asking for passwords again that KWallet should have stored already long ago, this indicates that automatic migration from {{Package|kde-apps/kwalletd}} to {{Package|kde-frameworks/kwallet}} has failed.
-
-{{FileBox|filename=~/.config/kwalletrc|title=Remove these lines to re-enable password migration|lang=bash|1=
-[Migration]
-alreadyMigrated=true
-}}
-
-After editing and saving this file, leaving the session and re-entering should trigger the migration assistant, visible through the usual KWallet password prompt.
-
-Unfortunately in some configurations, automatic migration has never worked properly. For those cases, there is a manual workaround - temporarily remove the new KWallet version and install the tool for managing legacy kdelibs4-based KWallets:
-
-{{RootCmd|emerge -C kde-frameworks/kwallet
-|emerge -1 kde-apps/kwalletmanager:4}}
-
-{{Note|This assumes {{Package|kde-apps/kwalletd}} is still present. If it had been removed already, it will also need to be temporarily re-emerged.}}
-
-After leaving the session and re-entering, executing <code>kwalletmanager</code> (important: this is NOT the same as <code>kwalletmanager5</code>) via <code>krunner</code> will add a new system tray application <code>Wallet Manager</code> through which old KWallets can be manually exported into XML files via <code>File -> Export as XML</code>. Make sure to keep these files only for the length of this process.
-
-{{RootCmd|emerge -1 kde-frameworks/kwallet && emerge kde-apps/kwalletmanager}}
-
-After once again entering a new Plasma session, now the previously created XML files can be imported into the new KWallet by executing <code>kwalletmanager5</code>, raising it from system tray and navigating to <code>File -> Import XML</code>.
-
-At this point, the temporary XML files should be deleted again (skip the trash), and legacy packages can be removed:
-
-{{RootCmd|emerge -C kde-apps/kwalletmanager:4 kde-apps/kwalletd}}
-
-==== KWallet auto-unlocking ==== <!--T:121-->
-
-{{Package|kde-plasma/kwallet-pam}} provides a mechanism to avoid being subsequently asked for access to kwallet after login.
-
-<!--T:123-->
-{{Emerge|kde-plasma/kwallet-pam}}
-
-<!--T:124-->
-It requires the following setup:
-* For KWallet security, use classic blowfish encryption instead of GPG
-* Choose same password for login and kwallet
-* Configure a display manager with support for PAM - both {{Package|x11-misc/sddm}} and {{Package|x11-misc/lightdm}} fulfill that requirement:
-
-<!--T:125-->
-{{FileBox|filename=/etc/pam.d/sddm|title=Adding lines for KWallet PAM unlocking via SDDM|lang=bash|1=
--auth           optional        pam_kwallet5.so
--session        optional        pam_kwallet5.so auto_start
-}}
-
-<!--T:126-->
-{{Note|For LightDM, {{Path|/etc/pam.d/lightdm}} needs to be edited instead.}}
-
-==== Disabling KWallet ====
-
-To disable the KWallet subsystem completely, edit the following file:
-
-{{FileBox|filename=~/.config/kwalletrc|lang=bash|1=
-[Wallet]
-Enabled=false
-}}
-
-=== SSH/GPG Agent startup/shutdown scripts === <!--T:131-->
-
-<!--T:132-->
-ssh-agent scripts are located in {{Path|/etc/plasma/startup}} and {{Path|/etc/plasma/shutdown}}. The [[Keychain]] article provides more information about this.
-
-=== Run GUI applications with root privileges ===
-
-{{Warning|It could be a ''very'' bad idea to start GUI applications with root privileges, versus adding the regular user to the relevant group or simply just running the command unprivileged. Only use {{c|kdesu}} when absolutely necessary.}}
-
-KDE Plasma has a utility in order to start graphical programs with root privileges. It is provided by {{Package|kde-plasma/kde-cli-tools}} - if built with USE flag <code>kdesu</code>, a graphical frontend to {{Package|kde-frameworks/kdesu}} is installed, which can be used by invoking {{c|kdesu}}. This can be done either from KRunner or a terminal emulator:
-
-{{Cmd|kdesu <program-name>}}
-
-A message dialog will be displayed prompting for the root password.
-
-{{Note|Some applications such as kwrite, dolphin etc. refuse to be opened as root for security reasons.}}
-
-== Applications == <!--T:90-->
-
-<!--T:91-->
-Releases consist of various applications and supporting libraries based on Qt 5/KDE Frameworks 5 as well as Qt 4/KDElibs 4, with the latter still being in long term support mode. In Portage, the distinction is made using slots <code>4</code> and <code>5</code>. Porting is an ongoing process where each major release is making inroads to Frameworks 5, and therefore contains both well matured and newly ported applications. Note that it also means potential dependency conflicts when two packages depend on slot 4 and 5 of the same library that can not be installed at the same time - such packages are dropped from *-meta.
-
-=== Available versions === <!--T:3-->
-
-</translate>
-{| {{{!}} class{{=}}"table table-striped table-condensed"
-! style{{=}}"background: #31206C; color: white; white-space: nowrap;" | KDE
-! style{{=}}"background: #31206C; color: white; white-space: nowrap;" | Gentoo
-! style{{=}}"background: #31206C; color: white; white-space: nowrap;" | Ebuild repository
-! style{{=}}"background: #31206C; color: white; white-space: nowrap;" | Status
-|-
-| KDE Applications 16.12.3
-| kde-apps/kde-apps-meta-16.12.3
-| gentoo
-| Stable for {{Keyword|amd64}} and {{Keyword|x86}}
-|-
-| KDE Applications 17.04.2
-| kde-apps/kde-apps-meta-17.04.2
-| gentoo
-| Testing for {{Keyword|amd64}} and {{Keyword|x86}}
-|-
-| KDE Applications 17.04 stable branch
-| kde-apps/kde-apps-meta-17.04.49.9999
-| [[KDE/Ebuild repository|KDE]]
-| Live version
-|-
-| KDE Applications master branch
-| kde-apps/kde-apps-meta-9999
-| [[KDE/Ebuild repository|KDE]]
-| Live version
-|}
-<translate>
-
-<!--T:94-->
-KDE Applications is divided in the following meta packages:
-
-<!--T:95-->
-{| {{{!}} class{{=}}"table table-striped table-condensed"
-! style{{=}}"background: #31206C; color: white; white-space: nowrap;" | Package name
-! style{{=}}"background: #31206C; color: white; white-space: nowrap;" | Description
-|-
-| {{Package|kde-apps/kdeaccessibility-meta}}
-| Accessibility applications and utilities.
-|-
-| {{Package|kde-apps/kdeadmin-meta}}
-| Administrative utilities, which helps in managing the system.
-|-
-| {{Package|kde-apps/kdecore-meta}}
-| Basic applications such as file browser, editor, terminal emulator.
-|-
-| {{Package|kde-apps/kdeedu-meta}}
-| Educational applications and games.
-|-
-| {{Package|kde-apps/kdegames-meta}}
-| Standard desktop games.
-|-
-| {{Package|kde-apps/kdegraphics-meta}}
-| Graphics applications such as image viewers, color pickers, etc.
-|-
-| {{Package|kde-apps/kdemultimedia-meta}}
-| Audio and video playback applications and services.
-|-
-| {{Package|kde-apps/kdenetwork-meta}}
-| Network applications and VNC services.
-|-
-| {{Package|kde-apps/kdepim-meta}}
-| PIM applications such as emailer, addressbook, organizer, etc.
-|-
-| {{Package|kde-apps/kdesdk-meta}}
-| Various development tools.
-|-
-| {{Package|kde-apps/kdeutils-meta}}
-| Standard desktop utilities such as a archiver, a calculator, etc.
-|-
-| {{Package|kde-apps/kdewebdev-meta}}
-| Web development tools.
-|}
-
-=== Installation === <!--T:133-->
-
-<!--T:92-->
-The {{Package|kde-apps/kde-apps-meta}} package provides the full Applications bundle, but alternatively, one or several smaller meta packages from the list above may be picked instead:
-
-<!--T:93-->
-{{Emerge| kde-apps/kde-apps-meta}}
-
-=== Localization === <!--T:30-->
-
-<!--T:31-->
-While Frameworks and Plasma are shipping their translations per-package, [[localization]] of KDE Applications is provided via separate <code>*-l10n</code> packages. The <code>nls</code> USE flag is enabled by default for linux [[Profile_(Portage)|profiles]], and it is used by KDE Applications meta packages to pull in the necessary dependencies.
-
-<!--T:60-->
-If only a select few languages are desired, define the <var>L10N</var> variable in {{Path|/etc/portage/make.conf}}. E.g. to use the German language, set:
-
-<!--T:32-->
-{{FileBox|filename=/etc/portage/make.conf|title=Setting the <var>L10N</var> variable for the German language|lang=bash|1=
-L10N="de"
-}}
-
-<!--T:110-->
-To '''manually''' install these localization packages instead:
-
-<!--T:135-->
-{{Package|kde-apps/kde-l10n}} contains translations for the majority of applications in slot <code>5</code>.
-
-<!--T:33-->
-{{Emerge|kde-l10n}}
-
-{{Note|The above is valid only up until KDE Applications 16.12.3. Starting with 17.04, translations are included per-package in slot <code>5</code>, and only legacy packages in slot <code>4</code> continue to rely on the separate localization tarball below.}}
-
-{{Package|kde-apps/kde4-l10n}} contains translations for legacy applications in slot <code>4</code>.
-
-{{Emerge|kde4-l10n}}
-
-=== KDE PIM === <!--T:102-->
-
-==== Available versions ==== <!--T:111-->
-
-<!--T:137-->
-In Portage, three variants of the KDE Personal Information Management (KDE PIM) suite (including {{Package|kde-apps/kmail}}, {{Package|kde-apps/kontact}}, and {{Package|kde-apps/korganizer}}) are available.
-
-</translate>
-{| {{{!}} class{{=}}"table table-striped table-condensed"
-! style{{=}}"background: #31206C; color: white; white-space: nowrap;" | KDE
-! style{{=}}"background: #31206C; color: white; white-space: nowrap;" | Gentoo
-! style{{=}}"background: #31206C; color: white; white-space: nowrap;" | Ebuild repository
-! style{{=}}"background: #31206C; color: white; white-space: nowrap;" | Status
-|-
-| KDE PIM 4.4.2017.04
-| kde-apps/kdepim-meta-4.4.2017.04
-| gentoo
-| Testing for {{Keyword|amd64}} and {{Keyword|x86}}
-|-
-| KDE PIM 4.14.11_pre20160611
-| kde-apps/kdepim-meta-4.14.11_pre20160611
-| gentoo
-| Stable for {{Keyword|amd64}} and {{Keyword|x86}}
-|-
-| KDE PIM 17.04.2
-| kde-apps/kdepim-meta-17.04.2
-| gentoo
-| Testing for {{Keyword|amd64}} and {{Keyword|x86}}
-|}
-<translate>
-
-==== KDE PIM 4.14.11 and earlier ==== <!--T:138-->
-
-<!--T:99-->
-At the time of writing, the current stable version range is at 4.14.11, which includes an Akonadi-based kmail (also known as kmail2) and is still based on Qt 4/KDElibs 4.
-
-{{Emerge|kde-apps/kdepim-meta}}
-
-<!--T:139-->
-In addition, a "[https://launchpad.net/~pali/+archive/ubuntu/kdepim-noakonadi noakonadi fork]" is available as version 4.4.2017.04 (also known as kmail1). Adding a [https://gitweb.gentoo.org/proj/kde.git/plain/Documentation/package.mask/kdepim-4.7 package.mask file] is recommended to get it:
-
-<!--T:140-->
-{{RootCmd|wget https://gitweb.gentoo.org/proj/kde.git/plain/Documentation/package.mask/kdepim-4.7 -O /etc/portage/package.mask/kdepim-4.7
-|emerge &#61;kde-apps/kdepim-meta-4.4.2017.04}}
-
-==== KDE PIM 17.04 and later ==== <!--T:113-->
-
-<!--T:144-->
-The latest upstream release based on Qt 5/KF 5 remains testing until it is deemed suitable for stable use, but testing is appreciated.
- 
-The codebase has been ported from {{Package|dev-qt/qtwebkit}} to {{Package|dev-qt/qtwebengine}} which is based on Chromium's Blink. By default, this package sets and uses the <code>system-ffmpeg</code> USE flag, which comes down to a {{Package|media-video/ffmpeg}} package dependency, so users preferring {{Package|media-video/libav}} for the rest of their system will need to switch off that USE flag.
-
-<!--T:115-->
-Unfortunately, not all of the KDE Applications are compatible yet, with some packages still depending on Qt 4/KDElibs 4 based parts that can not be installed with modern KDE PIM at the same time. That includes {{Package|kde-apps/kopete}}, {{Package|kde-apps/klinkstatus}}, and possibly other packages outside of the kde-apps category. By default, these packages are no longer installed by {{Package|kde-apps/kde-apps-meta}}.
-
-<!--T:116-->
-The following commands will deselect any packages from world that would still depend on these conflicting packages:
-
-<!--T:117-->
-{{RootCmd|equery -q d kde-apps/kdepim-common-libs &#124; sed -e "s/-[0-9].*//" &#124; xargs emerge --deselect
-|equery -q d kde-apps/kdepimlibs &#124; sed -e "s/-[0-9].*//" &#124; xargs emerge --deselect
-|equery -q d kde-apps/akonadi &#124; sed -e "s/-[0-9].*//" &#124; xargs emerge --deselect
-|emerge --deselect kdepim-l10n}}
-
-<!--T:118-->
-{{Note|This requires {{Package|app-portage/gentoolkit}} to be installed. The [[Gentoolkit]] article provides more information about this useful utility.}}
-
-<!--T:147-->
-Some conflicts with older packages may be solved by adding per-package USE flag settings:
-
-<!--T:148-->
-{{FileBox|filename=/etc/portage/package.use/kdepim-17.04|lang=bash|1=
-app-accessibility/simon -pim
-app-office/calligra:4 -pim
-}}
-
-<!--T:119-->
-With all that prepared, KDE PIM is ready to be installed:
-
-<!--T:120-->
-{{Emerge|kde-apps/kdepim-meta}}
-
-== Frameworks == <!--T:69-->
-
-<!--T:70-->
-KDE Frameworks 5 is a collection of libraries and software frameworks that provide the foundation for KDE Plasma 5 and KDE Applications, but may be leveraged by any Qt application.
-
-<!--T:71-->
-As Frameworks are mostly libraries and provide little user functionality, it's not necessary to install them manually - the required packages will be pulled in automatically as dependencies.
-
-=== Available versions === <!--T:100-->
-
-</translate>
-{| {{{!}} class{{=}}"table table-striped table-condensed"
-! style{{=}}"background: #31206C; color: white; white-space: nowrap;" | KDE
-! style{{=}}"background: #31206C; color: white; white-space: nowrap;" | Gentoo
-! style{{=}}"background: #31206C; color: white; white-space: nowrap;" | Ebuild repository
-! style{{=}}"background: #31206C; color: white; white-space: nowrap;" | Status
-|-
-| KDE Frameworks 5.34.0
-| kde-frameworks/*-5.34.0
-| gentoo
-| Stable for {{Keyword|amd64}} and {{Keyword|x86}}, Testing for {{Keyword|arm}}
-|-
-| KDE Frameworks master branch
-| kde-frameworks/*-9999
-| [[KDE/Ebuild repository|KDE]]
-| Live version
-|}
-<translate>
-
-== More KDE software == <!--T:55-->
-
-<!--T:56-->
-The most important KDE applications are in the Gentoo ebuild repository and many are located in the [https://packages.gentoo.org/category/kde-apps kde-apps] and [https://packages.gentoo.org/category/kde-misc kde-misc] categories.
-
-== Troubleshooting ==
-
-Refer to the [[KDE/Troubleshooting|Troubleshooting]] sub-article.
-
-== See also == <!--T:57-->
-
-<!--T:58-->
-* [[KDE/Plasma_5_upgrade|Plasma 4 to 5 upgrade page]] - Information on how to upgrade from Plasma 4, migration and troubleshooting.
-* [[KDE/Ebuild repository|KDE ebuild repository]] - Instructions on adding Gentoo's KDE ebuild development repository to a system.
-* [[Overlay:kde-sunset|kde-sunset ebuild repository]] - For old KDE software that has been removed from the main ebuild repository.
-
-== External links == <!--T:59-->
-
-<!--T:61-->
-* [https://userbase.kde.org/ Official KDE user wiki]
-* [https://forum.kde.org/ Official KDE forum]
-* [https://store.kde.org/ KDE Store (themes, widgets, wallpapers, etc.)]
-</translate>
-
-== References ==
-
-<references />
-
-[[Category:KDE]] [[Category:Desktop environment]]
+{{WIP}}
+KDE is a powerful graphical desktop environment for Unix workstations.
+
+In Gentoo there are 3 packages that will emerge a KDE environment, {{Package|kde-base/kde-meta}}, the full KDE suite, {{Package|kde-base/kdebase-meta}}, a bare KDE environment(no KDE applications) and {{Package|kde-base/kdebase-startkde}}, A very minimal KDE environment(no KDE applications or artwork). Its usually a good idea to start with {{Package|kde-base/kdebase-meta}} and emerge whatever else you need as you go.
+
+== Installation ==
+Before you start the emerge make sure you have the USE flags '''consolekit''', '''policykit''', '''dbus''' and '''udev''' enabled globally, if you are using a desktop/kde or plain desktop profile they are enabled by said profile.
+
+KDE pulls in some packages that are quite heavy, {{Package|dev-libs/boost}}, {{Package|x11-libs/qt-webkit}}, {{Package|x11-libs/qt-gui}} to name but a few, so the emerge will probably take awhile.
+{{Emerge|kde-base/kdebase-meta}}
+
+There are other meta packages that can be installed to pull in parts of the KDE suite:
+* {{Package|kde-base/kdeaccessibility-meta}}
+:Accessibility applications and utilities.
+* {{Package|kde-base/kdeadmin-meta}}
+:Administrative utilities, pulls in tools such as {{Package|kde-base/kuser}}, {{Package|kde-base/kcron}}, etc. which helps you manage your system.
+* {{Package|kde-base/kdeartwork-meta}}
+:Extra themes, screensavers, etc.
+* {{Package|kde-base/kdebindings-meta}}
+:Bindings for various languages.
+* {{Package|kde-base/kdeedu-meta}}
+:Educational applications and "games".
+* {{Package|kde-base/kdegames-meta}}
+:Standard array of desktop games.
+* {{Package|kde-base/kdegraphics-meta}}
+:Graphics applications such as image viewers, color pickers, etc.
+* {{Package|kde-base/kdemultimedia-meta}}
+:Audio and video playback applications and services.
+* {{Package|kde-base/kdenetwork-meta}}
+:Network applications such as {{Package|kde-base/kopete}} and VNC services.
+* {{Package|kde-base/kdepim-meta}}
+:The KDE PIM suite.
+* {{Package|kde-base/kdesdk-meta}}
+:Various development tools.
+* {{Package|kde-base/kdetoys-meta}}
+:Toy like applications, think {{Package|x11-apps/xeyes}} and alike.
+* {{Package|kde-base/kdeutils-meta}}
+:Stanadard desktop utilies such as a archiver({{Package|kde-base/ark}}), a caluculator({{Package|kde-base/kcalc}}) and more.
+* {{Package|kde-base/kdewebdev-meta}}
+:Web development tools.
